--- a/src/components/MainContent/Dialogs/Dialogs.module.css
+++ b/src/components/MainContent/Dialogs/Dialogs.module.css
@@ -2,6 +2,8 @@
     display: grid;
     grid-template-columns: 100px 1fr;
     min-height: 100%;
+
+    border-bottom: 1px solid green;
 }
 
 .dialogItems{
@@ -13,4 +15,5 @@
 }
 
 .dialogMessages{
+
 }
