--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -5,7 +5,7 @@
 }
 
 .nav ul li {
-    padding: 5px 10px;
+    padding: 5px 15px;
 }
 
 .nav a {
@@ -15,4 +15,11 @@
 .nav a.active {
     color: gold;
     font-size: 40px;
+}
+
+.friends__title{
+    margin-left: 15px;
+    margin-bottom: 5px;
+    font-size: 45px;
+    color: yellow;
 }
