--- a/src/components/Navbar/NavbarFriendsContainer/NavbarFriends/NavbarFriends.module.css
+++ b/src/components/Navbar/NavbarFriendsContainer/NavbarFriends/NavbarFriends.module.css
@@ -3,3 +3,10 @@
     flex-wrap: wrap;
     justify-content: flex-start;
 }
+
+.friends__title{
+    margin-left: 15px;
+    margin-bottom: 5px;
+    font-size: 45px;
+    color: yellow;
+}
