после урока 55 -добавлен users pagination

--- a/src/components/MainContent/Users/Users.module.css
+++ b/src/components/MainContent/Users/Users.module.css
@@ -7,3 +7,12 @@
   margin: auto;
   padding: 5px 25px;
 }
+
+.activePage{
+  font-weight: bold;
+  color:white;
+}
+span{
+  display: inline-block;
+  margin-left: 3px;
+}
