--- a/src/components/MainContent/Users/Users.module.css
+++ b/src/components/MainContent/Users/Users.module.css
@@ -7,3 +7,13 @@
   margin: auto;
   padding: 5px 25px;
 }
+
+span{
+  display: inline-block;
+  margin-right: 3px;
+}
+
+.activePage{
+  font-weight: bold;
+  color: white;
+}
