после урока 61 -в store добавлен authReducer -в header добавлен AuthContainer -удалены из axios ненужные headers -в ProfileContainer добавлено отображение собственного профиля, если пользователь авторизован -исправлены некоторые стили

--- a/src/components/Header/Auth/Auth.module.css
+++ b/src/components/Header/Auth/Auth.module.css
@@ -1,13 +1,8 @@
-.logo{
+.authInfo{
     text-decoration: none;
     color: #fff;
     display: inline-flex;
     align-items: center;
     height: 100%;
     padding: 0 20px;
-}
-
-header{
-    display: flex;
-    justify-content: space-between;
 }
