после урока 64 -добавлен ProfileContainer и отображение профиля пользователя -добавлен authReducer -добавлены AuthContainer и Auth и встроены в header -исправлен Preloader -работа с API сервером вынесена в DAL -настроена работа с follow-unfollow api -fixes в userContainer и его children

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,8 @@ a{
 header{
     grid-area: head;
     background-color: #124512;
+    display: flex;
+    justify-content: space-between;
 }
 
 main{
