--- a/src/components/MainContent/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/MainContent/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,3 +1,13 @@
 .profileInfo{
     padding: 5px;
 }
+
+.profileInfo >img{
+    width: 100%;
+    max-height: 200px;
+}
+
+.profileAvatar{
+    max-width: 100px;
+    max-height: 100px;
+}
