--- a/src/components/MainContent/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/MainContent/Profile/ProfileInfo/ProfileInfo.module.css
@@ -2,7 +2,12 @@
     padding: 5px;
 }
 
-.profileInfo >img{
+.profileImage{
     width: 100%;
     max-height: 200px;
+}
+
+.profileAvatar{
+    width:100px;
+    height: auto;
 }
