после урока 80 -добавлен formik и Yup -настроены все формы в программе через formik -добавлен и настроен login/logout API -добавлена инициализация приложения и authMe вынесен из header в app

--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,13 @@ main{
     grid-area: main;
     background-color: #f2351d;
 }
+
+#root > .preloader{
+    text-align: center;
+}
+
+.error{
+    color: white;
+    font-weight: bold;
+    margin-left: 5px;
+}
