--- a/src/components/MainContent/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/MainContent/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,13 +1,44 @@
 .profileInfo{
+    display: flex;
+    flex-direction: row-reverse;
     padding: 5px;
+    justify-content: space-between;
 }
 
-.profileInfo >img{
+.profileGag{
     width: 100%;
     max-height: 200px;
+}
+
+.profileMainPart{
+    flex: 0 1 70%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    align-items: center;
+    text-align: center;
 }
 
 .profileAvatar{
     max-width: 100px;
     max-height: 100px;
 }
+
+.profileFullname{
+    text-align: right;
+}
+
+.customFileUpload {
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+}
+
+.profileInfo input[type="file"]{
+    display: none;
+}
+
+/*.status{*/
+/*    max-width: 350px;*/
+/*}*/
